[package]
name = "mp4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstringify = "0.1.2"
byteorder = "1.5.0"
derivative = "2.2.0"
fixed = "1.24.0"
fixed-macro = "1.2.0"
thiserror = "1.0.50"
memmap2 = "0.9.0"

[dev-dependencies]
memmap2 = "0.9.0"
