[package]
name = "isobmff"
version = "0.1.0"
edition = "2021"
description = "ISO base media file format authoring and parsing."
authors = ["Valaphee <iam@valaphee.com>"]
repository = "https://github.com/valaphee/isobmff.git"
license = "Apache-2.0"

[dependencies]
bstringify = "0.1"
byteorder = "1.5"
derivative = "2.2"
fixed = "1.25"
fixed-macro = "1.2"
thiserror = "1.0"
